# Streamline-CFD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  defines.h
src/fluids/: CMakeLists.txt  fluid.cpp  fluid.h  shapes.h
src/fluids/LBM/: lbm2d.cpp  lbm2d.h  old_lbm2d.cpp  old_lbm2d.h
src/fluids/SPH/: sph2d.cpp  sph2d.h
src/fluids/VPHMCF/: vphmcf.cpp  vphmcf.h
src/fluids/WAV/: wav.cpp  wav.h
src/opencl/: CLContext.h  CLDevice.h  CMakeLists.txt  clw.h  interop.h
src/opengl/: CMakeLists.txt  OBJ_Loader.h  camera.h  glshader.h  mesh.cpp  mesh.h
src/shaders/opencl/: lbm.cl  lbmRender.cl  mandelbrot.cl  old_lbm.cl  wave2d.cl
src/shaders/opengl/: asColor.fs  heightField.fs  holoLight.fs  render.fs  render.vs  vertex.vs
src/streamline/: CMakeLists.txt  application.cpp  application.h  glwidget.cpp  glwidget.h  infoWidget.cpp  infoWidget.h  main.cpp
src/streamline/scenes/: scene.h  sceneBuilder.h
src/streamline/scenes/LBM_2D/: turbulentScene.h
src/streamline/scenes/SPH_2D/: damBreakScene.h
src/streamline/scenes/VPHMCF_2D/: bubbleScene.h
src/streamline/scenes/WAV/: boatScene.h
